--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 
 # SEO settings
-title: "Think"
-title2: "space" # default: ""
-description: "Just another minimalist Jekyll theme that focuses on technical writing."
-keywords: "Jekyll, theme, free, download, SEO, blog, web, minimalist, thinkspace"
-url: http://heiswayi.github.io/thinkspace # site url
-baseurl: "/thinkspace" # apply repo name if use it under gh-pages branch
+title: "Leily"
+title2: "Blog" # default: ""
+description: "Leily 的博客."
+keywords: "python linux saltstack"
+url: http://leily.github.io/ # site url
+baseurl: "" # apply repo name if use it under gh-pages branch
 # baseurl: null # apply null if repo name is something like username.github.io
 
 google_analytics: UA-XXXXX-XX
-repo: http://github.com/heiswayi/thinkspace
-disqus_shortname: "heiswayi"
-twitter_username: "HeiswayiNrird"
+repo: http://github.com/leily
+disqus_shortname: "leily"
+twitter_username: "leily"
 comments: true
 
 # Build settings
@@ -33,12 +33,12 @@ author:
   job      : "R&D Software Engineer"
   bio      : "1+1=3 is always TRUE in my world, a balance between binary and reality."
   thumb    : /images/author.jpg
-  email    : hnrird@gmail.com
-  url      : http://heiswayi.github.io
-  github   : http://github.com/heiswayi
-  twitter  : http://twitter.com/HeiswayiNrird
-  facebook : https://www.facebook.com/profile.php?id=1257583160
-  linkedin : http://linkedin.com/in/nrird
+  email    : 274154142@qq.com
+  url      : http://leily.github.io
+  github   : http://github.com/leily
+  twitter  : 
+  facebook : 
+  linkedin : 
 
 # social settings
 og_locale: "en_US"
