--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ sass:
 
 # Author settings
 author:
-  name     : "Heiswayi Nrird"
-  job      : "R&D Software Engineer"
-  bio      : "1+1=3 is always TRUE in my world, a balance between binary and reality."
+  name     : "Leily"
+  job      : "IT运维人员"
+  bio      : "1+1=3 is always TRUE in my world, SO，JUST it."
   thumb    : /images/author.jpg
   email    : 274154142@qq.com
   url      : http://leily.github.io
