--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # SEO settings
-title: "Leily"
+title: "Leily'S"
 title2: "Blog" # default: ""
 description: "Leily 的博客."
 keywords: "python linux saltstack"
