--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 title: "Leily'S"
 title2: "Blog" # default: ""
 description: "Leily 的博客."
-keywords: "python linux saltstack"
-url: http://leily.github.io/ # site url
+keywords: "python linux saltstack bash 等"
+url: http://leilyzhang.github.io/ # site url
 baseurl: "" # apply repo name if use it under gh-pages branch
 # baseurl: null # apply null if repo name is something like username.github.io
 
 google_analytics: UA-XXXXX-XX
-repo: http://github.com/leily
+repo: http://github.com/leilyzhang
 disqus_shortname: "leily"
 twitter_username: "leily"
 comments: true
@@ -34,16 +34,16 @@ author:
   bio      : "1+1=3 is always TRUE in my world, SO，JUST it."
   thumb    : /images/author.jpg
   email    : 274154142@qq.com
-  url      : http://leily.github.io
-  github   : http://github.com/leily
+  url      : http://leilyzhang.github.io
+  github   : http://github.com/leilyzhang
   twitter  : 
   facebook : 
   linkedin : 
 
 # social settings
 og_locale: "en_US"
-twitter_card: "leily"
-twitter_site: "@leily"
+twitter_card: "leilyzhang"
+twitter_site: "@leilyzhang"
 
 gems:
   - bourbon
