--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ sass:
 author:
   name     : "Leily"
   job      : "SA"
-  bio      : "1+1=3 is always TRUE in my world, SO，JUST it.Create this Blog, Only for recording technology"
+  bio      : "1+1=3 is always TRUE in my world, SO，Create this Blog, Only for recording technology learning process"
   thumb    : /images/author.jpg
   email    : 274154142@qq.com
   url      : http://leilyzhang.github.io
